--- a/nft-preview-card-component-main/css/style.css
+++ b/nft-preview-card-component-main/css/style.css
@@ -26,7 +26,7 @@ a{
   text-decoration: none;
 }
 .card{
-  max-width:28rem;
+  max-width:26rem;
   width:90%;
   margin:3em auto;
   background-color: var(--Darkbluecard);
@@ -43,6 +43,7 @@ a{
   border-radius:0.3em;
   max-width:23rem;
   width:100%;
+  height:20rem;
 }
 .card .card__title{
   color: var(--White);
@@ -140,5 +141,7 @@ a{
 }
 
 @media  screen and (min-width:992px) {
-     
+      body{
+        justify-content: center;
+      }
 }
