--- a/nft-preview-card-component-main/css/style.css
+++ b/nft-preview-card-component-main/css/style.css
@@ -18,6 +18,10 @@ body{
   flex-direction:column;
   align-items:center;
   background-color:var(--Darkbluemain);
+  justify-content: center;
+}
+main{
+  padding:0.75em;
 }
 img{
   max-width:100%;
@@ -26,12 +30,12 @@ a{
   text-decoration: none;
 }
 .card{
-  max-width:26rem;
-  width:90%;
-  margin:3em auto;
+  max-width:24rem;
+  width:100%;
+  margin:1em auto;
   background-color: var(--Darkbluecard);
   padding:1.75rem 1.75em;
-  border-radius:1em;
+  border-radius:0.75em;
   font-family: var(--ff-main);
   display:flex;
   flex-direction:column;
@@ -43,11 +47,11 @@ a{
   border-radius:0.3em;
   max-width:23rem;
   width:100%;
-  height:20rem;
+
 }
 .card .card__title{
   color: var(--White);
-  font-size:1.7rem;
+  font-size:clamp(1.2rem,5vw,1.7rem);
 }
 .card .card__link{
   position: relative;
@@ -87,7 +91,8 @@ a{
   font-weight:300;
   line-height:1.7;
   color:var(--Softblue);
-  font-size:1.1rem;
+  /* font-size:1.1rem; */
+  font-size:clamp(0.9rem,5vw,1.1rem);
 }
 .card .details__row {
 
@@ -97,7 +102,7 @@ a{
 
 .card .details__row  p{
   font-weight:600;
-  font-size:1.125rem;
+  font-size:clamp(0.7rem,5vw,1.1rem);
   margin-top:0;
 }
 .card .details__row  p:first-child{
@@ -129,7 +134,7 @@ a{
   outline:1px solid var(--White);
 }
 .author p, .author p a {
-   font-size:1.125rem;
+  font-size:clamp(0.5rem,5vw,1.1rem);
    color: var(--White);
    transition: all 250ms ease-in;
 }
@@ -141,7 +146,13 @@ a{
 }
 
 @media  screen and (min-width:992px) {
-      body{
-        justify-content: center;
+  
+      .card .card__top{
+        height:18rem;
+      
       }
+      .card{
+        width:90%;
+      }
+    
 }
