--- a/single-price-grid-component-master/css/style.css
+++ b/single-price-grid-component-master/css/style.css
@@ -139,15 +139,16 @@ main{
         padding: 1em 2.5em;
     }
     .three,.two{
-        padding-top:3em;
+        padding-top:2em;
     }
     .one{
         grid-column: 1/3;
-        padding-top:2em;
+        padding-top:1.5em;
         padding-bottom:2em;
     }
     .one .title__text{
         margin-bottom:1em;
+        margin-top:1em;
     }
     .two{
         grid-row: 2;
