--- a/intro-section-with-dropdown-navigation-main/css/style.css
+++ b/intro-section-with-dropdown-navigation-main/css/style.css
@@ -27,6 +27,7 @@ ul{
 
 header{
     padding-top: 1em;
+
 }
 .logo{
   margin-left:1em;  
@@ -48,6 +49,7 @@ header{
     content: '';
     position:absolute;
     inset:0;
+    height:200vh;
     background:rgba(0, 0, 0, 0.8);
 }
 .toggler__Btn{
@@ -63,7 +65,7 @@ header{
     top:0;
     right:0;
     width:50%;
-    height:100%;
+    height:200vh;
     background-color:var(--AlmostWhite);
     margin-top:0;
     padding: 3em 1em;
@@ -71,6 +73,7 @@ header{
     overflow: hidden;
     transform-origin: right;
     transform: scale(0,1);
+    z-index:50;
  
 }
 
@@ -108,7 +111,45 @@ header{
       color: var(--MediumGray);
 }
 .sub__list  >li{
-    /* background-color: red; */
-  
     margin-bottom: 1em;
-  }
+}
+main{
+    margin:1em 0;
+}
+.col:last-child{
+    display: none;
+}
+.container{
+    max-width:1140px;
+    width:90%;
+    margin:0 auto;
+}
+.title{
+    text-align: center;
+    margin-bottom:0;
+}
+.col{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+.col p{
+    text-align: center;
+    line-height:1.5;
+    color: var(--MediumGray);
+}
+.img__container{
+    margin-top:1em;
+    display: flex;
+    gap: 1em;
+    align-items: center;
+}
+.btn{
+    display:inline-block;
+    padding:1em;
+    border-radius: 1em;
+    color: var(--AlmostWhite);
+    background-color: var(--AlmostBlack);
+    
+}
+
