--- a/social-proof-section-master/css/style.css
+++ b/social-proof-section-master/css/style.css
@@ -48,11 +48,9 @@ main{
     font-size:1.2rem;
     color: var(--DarkGrayishMagenta);
     font-weight:500;
+    line-height:1.3;
 }
-.second__section{
 
- 
-}
 .second__section .col{
     background-color: var(--LightGrayishMagenta);
     padding:0.5em 0 0.2em 0;
@@ -86,6 +84,8 @@ main{
 }
 .card .card__top h3{
     color: #fff;
+    font-size: clamp(0.8rem,5vw,1rem);
+    line-height:1.1;
 }
 .card .card__top span{
     color: var(--SoftPink);
@@ -100,20 +100,40 @@ main{
 .card .card__body p{
     color: #fff;
     font-size:1.1rem;
+    line-height:1.4;
 }
 
 /*------------- second section  css end ------------------ */
 
 @media screen and (min-width:768px ) {
-    main{
+    body{
         background-image: url('../images/bg-pattern-top-desktop.svg');
-        background-position: left top;
-        background-size: 50%;
+        background-position: -50% -10%;
+        background-size: 60%;
+        position: relative;
+        background-repeat: no-repeat;
+    }
+    main{
+        background-image: none;
+    }
+
+    body::before{
+        content:'';
+        position: absolute;
+        inset:0;
+        background-image: url('../images/bg-pattern-bottom-desktop.svg');
+        background-position:right -100%;
+        background-size:cover;
+        background-repeat: no-repeat;
+     
+    }
+    .container{
+        max-width:1140px;
     }
     .col__1{
-        padding-top:8em;
+        padding-top:4em;
         display:flex;
-        justify-content: space-around;
+        justify-content: space-between;
     }
  
     .first__section{
@@ -133,7 +153,7 @@ main{
         display: flex;
         flex-direction: column;
         align-items: center;
-        align-self: flex-end;
+        align-self: center;
     }
     .stars{
         display: flex;
@@ -162,8 +182,51 @@ main{
 
     .col__2{
         display:flex;
-        justify-content: space-around;
+        justify-content: space-between;
+        gap:0.5em;
+    }
+     
+    .card{
+        max-width:350px;
+        width:100%;
+        padding:0.5em 1.6em;
+        transition: all 250ms ease-in;
+        position: relative;
+    }
+
+    .card .card__top{
+        gap:0.9em;
     }
     
+    .card:first-child{
+        margin-bottom:3em;
+    }
+
+    .card:last-child{
+       /* margin-bottom:1.5em; */
+       margin-top:3em;
+       margin-bottom:0;
+    }
+    .card:nth-child(2){
+        /* margin-bottom:1.5em; */
+        margin-bottom:1.75em;
+        margin-top:1.25em;
+    }
+    .card:hover{
+        cursor: pointer;
+        transform: translateY(-5px);
     
+    }
+    
+}
+@media screen and (min-width:992px ){
+    .second__section{
+        align-self: flex-end;
+    }
+}
+
+@media screen and (min-width:1500px ){
+   .container{
+       max-width:1350px;
+   }
 }
