--- a/social-proof-section-master/css/style.css
+++ b/social-proof-section-master/css/style.css
@@ -128,7 +128,7 @@ main{
      
     }
     .container{
-        max-width:1140px;
+        max-width:110px;
     }
     .col__1{
         padding-top:4em;
@@ -222,6 +222,10 @@ main{
 @media screen and (min-width:992px ){
     .second__section{
         align-self: flex-end;
+    }
+    .first__section h1.title{
+        font-size:3.3rem;
+        line-height:0.8;
     }
 }
 
