--- a/tip-calculator-app-main/css/style.css
+++ b/tip-calculator-app-main/css/style.css
@@ -6,4 +6,145 @@
 --Lightgrayishcyan: hsl(185, 41%, 84%);
 --Verylightgrayishcyan: hsl(189, 41%, 97%);
 --White: hsl(0, 0%, 100%);
+--ff: 'Space Mono', monospace;
 }
+*,*::before,*::after{
+    box-sizing:border-box;
+}
+body{
+    margin:0;
+    min-height:100vh;
+    font-family: var(--ff);
+    display:flex;
+    flex-direction:column;
+    justify-content: center;
+    
+    background-color: var(--Lightgrayishcyan);
+}
+main{
+    
+}
+.container{
+    max-width:1140px;
+    width:95%;
+    margin:0 auto;
+    padding:0.5em;
+    
+}
+
+.title{
+    text-align: center;
+    text-transform: uppercase;
+    color: var(--Darkgrayishcyan);
+    letter-spacing: 2px;
+}
+
+/*------ Calculator Css Start ---- */
+.calculator{
+    background-color: var(--White);
+    padding:1em 2em;
+    border-radius:1em;
+    
+}
+/* ----Calculator Css end ------------- */
+
+
+/*------ Calculator Top Css start ---------- */
+.calculator__top label{
+   color: var(--Grayishcyan);
+   position: relative;
+}
+
+.calculator__top #bill,#people{
+    display:block;
+    padding:0.6em 0.5em;
+    width:100%;
+    font-size:1.5rem;
+    margin-top:0.5em;
+    background-color: var(--Verylightgrayishcyan);
+    border:0;
+    border-radius:0.2em;
+    color: var(--Verydarkcyan);
+    font-family: var(--ff);
+}
+#bill,#people{
+    position: relative;
+    text-indent:20px;
+    text-align: right;
+}
+.calculator__top #bill__label::before{
+    content:'';
+    position: absolute;
+    top:60px;
+    z-index:2;
+    left:10px;
+    width:20px;
+    height:20px;
+    background-image: url('../images/icon-dollar.svg');
+    background-repeat: no-repeat;
+    background-position: center;
+}
+.calculator__top input[type=number]:focus{
+    outline:none;
+}
+input::-webkit-outer-spin-button,
+input::-webkit-inner-spin-button {
+  -webkit-appearance: none;
+  margin: 0;
+}
+
+/* Firefox */
+input[type=number] {
+  -moz-appearance: textfield;
+}
+
+.calculator__top h2{
+    font-size:1rem;
+    color: var(--Darkgrayishcyan);
+}
+.tips{
+    display: flex;
+    flex-wrap: wrap;
+    gap:1em;
+    align-items: center;
+}
+.tip{
+    border:0;
+    display:inline-block;
+    padding:0.7em 1em; 
+    font-size:1.2rem;
+    width:47%;
+    color: var(--White);
+    background-color: var(--Verydarkcyan);
+    border-radius:0.2em;
+    font-family: var(--ff);
+    cursor: pointer;
+    transition:all 250ms ease-in;
+    margin-bottom:1em;
+}
+.tip:hover{
+   background-color: var(--Strongcyan);
+   color: var(--Verydarkcyan);
+}
+
+input#custom{
+    background-color: var(--Verylightgrayishcyan);
+    color: var(--Darkgrayishcyan);
+    border-radius:0.2em;
+}
+
+.calculator__top #people__label::before{
+    content:'';
+    position: absolute;
+    top:60px;
+    z-index:2;
+    left:10px;
+    width:20px;
+    height:20px;
+    background-image: url('../images/icon-person.svg');
+    background-repeat: no-repeat;
+    background-position: center;
+}
+
+
+/*------ Calculator Top Css end --------------*/
