--- a/tip-calculator-app-main/css/style.css
+++ b/tip-calculator-app-main/css/style.css
@@ -148,3 +148,42 @@ input#custom{
 
 
 /*------ Calculator Top Css end --------------*/
+
+/* Calculator Bottom Css Start */
+.calculator__bottom{
+    background-color: var(--Verydarkcyan);
+    padding:1em;
+    border-radius:0.4em;
+    color: #fff;
+}
+.calculator__bottom div{
+    display: flex;
+    align-items:flex-start;
+    justify-content: space-between;
+    
+}
+.calculator__bottom h3{
+    margin:0 0 1em 0;
+}
+.calculator__bottom p{
+    font-size:2.1rem;
+    color: var(--Strongcyan);
+    margin-bottom:0;
+    margin-top: 0;
+}
+.calculator__bottom  span{
+    font-size:0.9rem ;
+    color: var(--Darkgrayishcyan);
+}
+.btn-reset{
+    display: inline-block;
+    margin:0 auto;
+    padding:1em;
+    width:100%;
+    text-transform: uppercase;
+    color: var(--Verydarkcyan);
+    background-color: var(--Strongcyan);
+    border:0;
+    cursor: pointer;
+    border-radius:0.2em;
+}
