--- a/tip-calculator-app-main/css/style.css
+++ b/tip-calculator-app-main/css/style.css
@@ -100,6 +100,16 @@ button:disabled{
     transition: all 250ms ease-in;
     
 }
+#people__label{
+    display: flex;
+    justify-content: space-between;
+}
+.error{
+    display: none;
+    color:rgba(255,0,0, 0.7);
+    opacity:0.5;
+}
+
 
 .calculator__top h2{
     font-size:1rem;
@@ -158,6 +168,7 @@ input#custom{
     padding:1em;
     border-radius:0.5em;
     color: #fff;
+    margin-top:2em;
 }
 .calculator__bottom div{
     display: flex;
