--- a/tip-calculator-app-main/css/style.css
+++ b/tip-calculator-app-main/css/style.css
@@ -21,6 +21,9 @@ body{
     
     background-color: var(--Lightgrayishcyan);
 }
+main{
+    margin-bottom: 2em;
+}
 
 .container{
     max-width:1140px;
@@ -35,6 +38,9 @@ body{
     text-transform: uppercase;
     color: var(--Darkgrayishcyan);
     letter-spacing: 2px;
+    margin-bottom: 0.5em;
+    font-size:1.4rem;
+    margin-top:0;
 }
 
 /*------ Calculator Css Start ---- */
@@ -219,6 +225,7 @@ input#custom{
     .calculator{
        display: flex;
        gap:1em;
+       padding: 2em 2em 3em 2em;
     }
     .container{
         width:95%;
