--- a/manage-landing-page-master/css/style.css
+++ b/manage-landing-page-master/css/style.css
@@ -44,5 +44,54 @@ nav{
 }
 .section-1 p{
     color: var(--DarkGrayishBlue-clr);
-    padding-right: 9em;
+    padding-right: 12em;
+}
+.section-2   p{
+    color: var(--DarkGrayishBlue-clr);
+}
+.section-2 .sec-2-a  p{
+
+    padding-right: 12em;
+}
+.section-2 h4{
+    background-color: var(--red-clr);
+    color: var(--VaryLightGray-clr);
+    padding: 0.7em 1.1em;
+    align-self: flex-start;
+    border-radius: 10em;
+    font-weight: 600;
+    text-align: center;
+    width:80px;
+}
+.section-3 .slide{
+    text-align: center;
+
+ 
+}
+.section-3 .slide img{
+    display: block;
+    margin: 0 auto;
+    width: 75px;
+    height: 75px;
+    position: relative;
+    top: 2em;
+
+   
+}
+.inner-slide{
+    background-color: var(--VaryLightGray-clr) ;
+    min-height: 300px;
+    padding: 4em 0em 0 0em;
+    margin: 0 10px;
+    /* max-width: 400px; */
+    
+}
+.inner-slide p{
+    color: hsl(227 12% 61%);
+    font-size: 0.9rem;
+    padding: 0 24px;
+   
+}
+.inner-slide:nth-child(2){
+    /* margin: 0 10px; */
 }
